# askametric

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  demo.ipynb  pyproject.toml  validation.ipynb
.github/: pull_request_template.md
askametric/: utils.py
askametric/query_processor/: query_processing_prompts.py  query_processor.py  schemas.py  tools.py
askametric/query_processor/db_descriptor/: description_generator.py  descriptor_prompts.py
askametric/query_processor/guardrails/: guardrails.py  guardrails_prompts.py
askametric/validation/: validation_processor.py  validation_prompts.py
demo_databases/: esa_gender_data.sqlite  morocco_afrobarometer.sqlite  tn_covid_cases_11_may.sqlite
experiments/: aam_experiment_w_json.ipynb  aam_v_vanna_comparison.ipynb  demo_greg.ipynb  tn_covid_all_responses.csv  tn_covid_cases_11_may_with_jsonb.sqlite  tn_covid_val_questions.csv
validation/: validate.py  validation_analysis.ipynb  validation_processor.py  validation_prompts.py  validation_template.env
