[tool.poetry]
name = "askametric"
version = "0.1.0"
description = "Text-2-SQL python package to answer questions using information from databases"
authors = ["ziakhan04 <khanziaaziz@gmail.com>", "poornimaramesh <poornimaramesh1995@gmail.com>", "edodge <edodge11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
aiocache = "^0.12.2"
litellm = "^1.41.23"
sqlalchemy = "^2.0.31"
cachetools = "^5.4.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
asyncpg = ">=0.29.0"
tenacity = "^9.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
